# bonfire

./: Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: book.yaml  docs.yaml
book/: book.toml
book/src/api/: gateway.md
docs/: book.toml  descriptor_set.pb  mdbook-protobuf.css
docs/src/: SUMMARY.md
docs/src/api/: gateway.md
docs/src/api/references/gateway/: v0.md
docs/src/features/: emojis.md  text.md
src/: channel.rs  lib.rs  message.rs  role.rs  user.rs
src/http/: gateway.rs  mod.rs
src/http/client/: mod.rs  templates.rs
src/http/oauth2/: mod.rs
src/proto/: docs.proto  mod.rs
src/proto/v0/: gateway.proto
src/server/: auth.rs  mod.rs
src/server/channel/: mod.rs
src/server/channel/text/: mod.rs  search.rs  worker.rs
src/server/channel/voice/: mod.rs
src/server/client/: mod.rs
src/server/gateway/: mod.rs
src/server/user/: mod.rs
templates/: login.html
